--- a/css/heading.css
+++ b/css/heading.css
@@ -7,6 +7,34 @@
   background-color: var(--bg-primary);
 }
 
-.navbar-text {
+.navbar-heading {
   color: var(--text-primary);
+  font-size: 45px;
+  text-decoration: none;
+  font-weight: 600;
+  font-family: sans-serif;
+}
+
+.navbar-item {
+  color: var(--text-primary);
+  text-decoration: none;
+  font-weight: 700;
+  font-family: sans-serif;
+  font-size: 18px;
+  cursor: pointer;
+  padding: 10px;
+  transition: color 0.3s ease, background-color 0.3s ease;
+  position: relative;
+}
+
+.navbar-item:hover::before {
+  content: '';
+  position: absolute;
+  width: 10px;
+  height: 100px;
+  background-color: var(--text-primary);
+  color: var(--text-primary);
+  bottom: 90%;
+  right: 40%;
+  border-radius: 12px;
 }
