navbar animation done

--- a/css/heading.css
+++ b/css/heading.css
@@ -23,18 +23,33 @@
   font-size: 18px;
   cursor: pointer;
   padding: 10px;
-  transition: color 0.3s ease, background-color 0.3s ease;
   position: relative;
 }
 
-.navbar-item:hover::before {
+.navbar-item::before {
   content: '';
   position: absolute;
   width: 10px;
   height: 100px;
   background-color: var(--text-primary);
-  color: var(--text-primary);
-  bottom: 90%;
+  bottom: -100px;
   right: 40%;
   border-radius: 12px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+@keyframes slideInFromTop {
+  from {
+    bottom: 100px;
+    opacity: 0;
+  }
+  to {
+    bottom: 30px;
+    opacity: 1;
+  }
+}
+
+.navbar-item:hover::before {
+  animation: slideInFromTop 0.4s forwards;
 }
