--- a/css/heading.css
+++ b/css/heading.css
@@ -1,6 +1,7 @@
 :root {
   --bg-primary: #208d75;
   --text-primary: #83deb2;
+  --res-nav-color: #028065;
 }
 
 .navbar-bg {
@@ -24,6 +25,16 @@
   cursor: pointer;
   padding: 10px;
   position: relative;
+}
+
+.navbar-res-item {
+  color: var(--text-primary);
+  text-decoration: none;
+  font-weight: 700;
+  font-family: sans-serif;
+  font-size: 18px;
+  cursor: pointer;
+  padding: 10px;
 }
 
 .navbar-item::before {
@@ -52,4 +63,8 @@
 
 .navbar-item:hover::before {
   animation: slideInFromTop 0.4s forwards;
+}
+
+.responsive-navbar {
+  background-color: var(--res-nav-color);
 }
