--- a/css/ask.css
+++ b/css/ask.css
@@ -33,7 +33,7 @@
   padding: 30px 0px;
 }
 
-.hover-btn {
+/* .hover-btn {
   background-color: white !important;
   border-radius: 52px;
 }
@@ -61,6 +61,43 @@
   background-color: white;
   padding: 20px 20px;
   border-radius: 50%;
+} */
+
+.ask-section-content-btn {
+  position: relative;
+}
+
+.ask-section-content-btn > .ask-section-playground {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+}
+
+.ask-section-content-btn > .ask-section-playground > button {
+  font-size: 40px;
+  font-weight: bold;
+  margin: 20px;
+  padding: 10px;
+  width: 200px;
+  border: 1px solid #ddd;
+  transition: all 0.5s ease-out;
+  color: #273c75;
+}
+
+.ask-section-content-btn > .ask-section-playground > button:hover {
+  color: #fff;
+}
+.ask-section-content-btn > .ask-section-playground > button {
+  background: linear-gradient(to right, #fff 50%, #e84118 50%);
+  background-size: 200% 100%;
+  background-position: left;
+}
+
+.ask-section-content-btn > .ask-section-playground > button:hover {
+  background-position: right;
 }
 
 .ask-section-animation {
