--- a/css/ask.css
+++ b/css/ask.css
@@ -33,36 +33,6 @@
   padding: 30px 0px;
 }
 
-/* .hover-btn {
-  background-color: white !important;
-  border-radius: 52px;
-}
-
-.ask-section-content > button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-  border: none;
-  outline: none;
-  background-color: transparent;
-}
-
-.ask-section-content > button > span {
-  font-size: 20px;
-  line-height: 32px;
-  font-family: sans-serif;
-  letter-spacing: 3px;
-  padding: 0px 25px;
-}
-
-.ask-section-content > button > i {
-  font-size: 30px;
-  background-color: white;
-  padding: 20px 20px;
-  border-radius: 50%;
-} */
-
 .ask-section-content-btn {
   position: relative;
 }
@@ -96,14 +66,14 @@
 }
 
 .ask-section-content-btn > .ask-section-playground > button > i {
-  background-color: white;
+  background-color: c6f7ea;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   padding: 20px 20px;
   border-radius: 35px;
 }
 
 .ask-section-content-btn > .ask-section-playground > button > i:hover {
-  background-color: white;
+  background-color: c6f7ea;
   box-shadow: none;
   border: none;
   outline: none;
@@ -114,7 +84,7 @@
 }
 .ask-section-content-btn > .ask-section-playground > button:hover {
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-  background: linear-gradient(to right, transparent 50%, #ffffff 50%);
+  background: linear-gradient(to right, white 50%, #c6f7ea 50%);
   background-size: 200% 100%;
   background-position: left;
 }
@@ -123,6 +93,45 @@
   background-position: right;
 }
 
+/* animation section */
+
 .ask-section-animation {
   grid-column: span 4;
+  display: flex;
+}
+
+.ask-section-animation > div:nth-child(1) {
+  width: 100px;
+  height: 300px;
+  border-radius: 100px;
+  background-color: var(--text-primary);
+  margin: 0px 25px;
+}
+
+.ask-section-animation > div:nth-child(2) {
+  width: 100px;
+  margin: 95px 25px;
+  height: 200px;
+  border-radius: 100px;
+  background-color: var(--text-primary);
+}
+
+.ask-section-animation > div:nth-child(3) {
+  display: flex;
+  flex-direction: column;
+}
+
+.ask-section-animation > div > div:nth-child(1) {
+  width: 100px;
+  margin: 0px 25px;
+  height: 170px;
+  border-radius: 100px;
+  background-color: var(--text-primary);
+}
+.ask-section-animation > div > div:nth-child(2) {
+  width: 100px;
+  margin: 30px 25px;
+  height: 100px;
+  border-radius: 100px;
+  background-color: var(--text-primary);
 }
