--- a/css/footer.css
+++ b/css/footer.css
@@ -81,3 +81,96 @@
 .footer-content > button > i {
   font-size: 25px;
 }
+
+/* ! footer two */
+.footer-two {
+  background-color: var(--res-nav-color);
+}
+
+.footer-two-content {
+  border-top: 1px solid var(--text-primary);
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  align-items: center;
+  padding: 10px 0 0 0;
+}
+
+.footer-two-content > .content-one {
+  grid-column: span 6;
+}
+
+.footer-two-content > .content-one {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: start;
+}
+
+.footer-two-content > .content-one > h1 {
+  font: normal normal 700 57px/24px sans-serif;
+  color: var(--text-primary);
+  text-transform: capitalize;
+  padding: 1rem 0rem;
+}
+
+.footer-two-content > .content-one > .footer-icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.footer-two-content > .content-one > .footer-icons > i {
+  color: var(--text-primary);
+  font-size: 25px;
+  padding: 10px 5px;
+}
+
+/* footer content two running */
+
+.footer-two-content > .content-two {
+  grid-column: span 6;
+}
+
+.footer-two-content > .content-two > ul {
+  display: flex;
+  justify-content: start;
+  align-items: start;
+  list-style: none;
+  gap: 20px;
+}
+
+.footer-two-content > .content-two > ul > li {
+  font-size: 17px;
+  line-height: 17px;
+  color: var(--text-primary);
+  font-family: sans-serif;
+  font-weight: 600;
+  padding: 1rem 0rem;
+}
+
+.content-two > .content-two-contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: self-end;
+  gap: 20px;
+}
+
+.content-two > .content-two-contact > .contact-one {
+  display: flex;
+  gap: 20px;
+}
+
+.contact-one > p {
+  font-size: 20px;
+  color: var(--text-primary);
+  line-height: 21px;
+  font-family: sans-serif;
+  font-weight: 700;
+}
+
+.contact-one > i {
+  font-size: 21px;
+  color: var(--text-primary);
+}
