--- a/css/what_we_do.css
+++ b/css/what_we_do.css
@@ -10,7 +10,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0 0 10rem 0;
+  padding: 10rem 0 10rem 0;
 }
 
 .what_we_do-content > h6 {
